# teensy41_pd

./: .gitignore  README.md  teensy41_pd.code-workspace
matlab/: README.md  UDP_reader.slx
rasppi/: CMakeLists.txt  README.md
rasppi/include/: print_echo_resp.hpp
rasppi/src/: main.cpp  send_udp.cpp
shared/: README.md
shared/include/: config.hpp
shared/scripts/: sync_to_rasppi.sh
teensy/: README.md  platformio.ini
teensy/include/: MotorDriver.hpp  UdpHandler.hpp
teensy/scripts/: clean_generated_code.sh
teensy/scripts/teensy_loader_cli/: upload.sh  upload_to_TEENSY41.sh
teensy/src/: MotorDriver.cpp  UdpHandler.cpp  main.cpp
